changed to fuschia color

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -133,7 +133,7 @@ hr.small {
   }
 }
 .intro-header {
-  background-color: #ffffff;
+  background-color: #ff69b4;
   background: no-repeat center center;
   background-attachment: scroll;
   -webkit-background-size: cover;
